fix Makefile, add text-only slide content

--- a/src/01-intro.tex
+++ b/src/01-intro.tex
@@ -10,8 +10,106 @@
 
 \begin{document}
 
+\frame{\titlepage}
+
+\section{Wer sind wir?}
+
 \begin{frame}
 
+	\frametitle{Wer wir sind (1)}
+
+	\begin{itemize}
+		\item Rosario Raulin
+		\item Informatik-Student im 3. Semester
+		\item Studienprofil: Webgründer
+		\item E-Mail: raulin@st.ovgu.de
+		\item Facebook, Twitter, ...
+	\end{itemize}
+
+\end{frame}
+
+\begin{frame}
+
+	\frametitle{Wer wir sind (2)}
+
+	\begin{itemize}
+		\item Kilian Gärtner
+		\item Informatik-Student im 3. Semester
+		\item E-Mail: kilian.gaertner@st.ovgu.de
+		\item Facebook, Minestar.de, ...
+	\end{itemize}
+
+\end{frame}
+
+\begin{frame}
+	\frametitle{Agenda}
+	\tableofcontents
+\end{frame}
+
+
+\section{Ziel und Motivation}
+
+\begin{frame}
+
+\frametitle{Worum geht's eigentlich?}
+
+	\begin{quote}
+		Ein Tutorium oder Tutorat ist an einer Hochschule eine Lehrveranstaltung
+		im Grundstudium, in der ein fortgeschrittener Student eine
+		Lehrveranstaltung unterstützt, indem er mit den Teilnehmern
+		Grundkenntnisse vertieft und -fertigkeiten einübt.
+
+		\begin{flushright}
+			\scriptsize Quelle: Wikipedia
+		\end{flushright}
+
+	\end{quote}
+	
+\end{frame}
+
+\begin{frame}
+
+	\frametitle{Oder anders ausgedrückt...}
+
+	\pause
+	\begin{center}
+		Wir möchten Euch helfen!
+	\end{center}
+	\pause
+
+	\begin{itemize}
+		\item wöchentlich, mittwochs, 11.15 - 12.45 Uhr
+		\item alle 2 Wochen "Pflicht" (wir zwingen Euch aber nicht)
+	\end{itemize}
+
+\end{frame}
+
+\begin{frame}
+
+	\frametitle{Unsere Ziele}
+
+	Unsere Ziele:
+	\begin{enumerate}
+		\item Abbrecherquote senken
+		\item sehr gute Prüfungsergebnisse
+	\end{enumerate}
+
+\end{frame}
+
+\begin{frame}
+	\frametitle{Was wir bieten}
+
+	Wir bieten Euch:
+	\begin{itemize}
+		\item praktisch Umsetzung des Vorlesungsstoffs
+		\item Hilfe in Theorie und Praxis
+		\item Programmiererfahrung (Kilian, siehe minestar.de)
+		\item kompetente Ansprechpartner ;-)
+	\end{itemize}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Take-Home-Message}
 	\begin{quote}
 		Wenn man etwas nicht weiß, so kann man fragen; wenn man etwas nicht
 		kann, so kann man es lernen.
@@ -23,7 +121,22 @@
 
 \end{frame}
 
-\frame{\titlepage}
+\section{Vorstellungsrunde}
+\section{Ausgabe der FIN-Accounts}
+\section{Einführung in Eclipse}
+\section{Fragen und Antworten}
+
+\begin{frame}
+	\frametitle{Vorstellungsrunde}
+	\begin{enumerate}
+		\item Wie heißt du?
+		\item Wie alt bist du?
+		\item Was studierst du?
+		\item Warum studierst du das?
+		\item Was sind dein Hobbys?
+		\item Hast du schon Programmiererfahrung?
+	\end{enumerate}
+\end{frame}
 
 \end{document}
 
