--- a/src/01-intro.tex
+++ b/src/01-intro.tex
@@ -1,12 +1,14 @@
 \documentclass[12pt]{beamer}
 
 \usepackage[utf8]{inputenc}
+\usepackage{graphicx}
+\usepackage{wrapfig}
 
 \usetheme{Rochester}
 
 \title{Tutorium - Einführung in die Informatik}
 \author{Kilian Gärtner, Rosario Raulin}
-\date{Oktober 2012}
+\date{Wintersemester 2012/13}
 
 \begin{document}
 
@@ -25,6 +27,10 @@
 		\item E-Mail: raulin@st.ovgu.de
 		\item Facebook, Twitter, ...
 	\end{itemize}
+
+	\begin{flushright}
+		\includegraphics[scale=0.1]{src/img/babygnu}
+	\end{flushright}
 
 \end{frame}
 
@@ -73,7 +79,7 @@
 
 	\pause
 	\begin{center}
-		Wir möchten Euch helfen!
+		\includegraphics[scale=0.42]{src/img/help}
 	\end{center}
 	\pause
 
@@ -88,6 +94,10 @@
 
 	\frametitle{Unsere Ziele}
 
+	\begin{wrapfigure}{l}{60px}
+		\includegraphics[scale=0.15]{src/img/doc}
+	\end{wrapfigure}
+
 	Unsere Ziele:
 	\begin{enumerate}
 		\item Abbrecherquote senken
@@ -99,6 +109,10 @@
 \begin{frame}
 	\frametitle{Was wir bieten}
 
+	\begin{wrapfigure}{r}{0pt}
+		\includegraphics[scale=0.55555]{src/img/tools}
+	\end{wrapfigure}
+
 	Wir bieten Euch:
 	\begin{itemize}
 		\item praktisch Umsetzung des Vorlesungsstoffs
@@ -106,6 +120,7 @@
 		\item Programmiererfahrung (Kilian, siehe minestar.de)
 		\item kompetente Ansprechpartner ;-)
 	\end{itemize}
+
 \end{frame}
 
 \begin{frame}
