--- a/src/01-intro.tex
+++ b/src/01-intro.tex
@@ -84,7 +84,7 @@
 	\pause
 
 	\begin{itemize}
-		\item wöchentlich, mittwochs, 11.15 - 12.45 Uhr
+		\item wöchentlich, mittwochs, 11.15 - 12.45 Uhr, G29-336
 		\item alle 2 Wochen "Pflicht" (wir zwingen Euch aber nicht)
 	\end{itemize}
 
