replace "Was wir bieten" with "Warum sollte ich mitmachen?"

--- a/src/01-intro.tex
+++ b/src/01-intro.tex
@@ -107,18 +107,26 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Was wir bieten}
+
+	\frametitle{Warum sollte ich mitmachen?}
 
 	\begin{wrapfigure}{r}{0pt}
 		\includegraphics[scale=0.55555]{src/img/tools}
 	\end{wrapfigure}
 
-	Wir bieten Euch:
+
+	Weil...
+	\pause
 	\begin{itemize}
-		\item praktisch Umsetzung des Vorlesungsstoffs
-		\item Hilfe in Theorie und Praxis
-		\item Programmiererfahrung (Kilian, siehe minestar.de)
-		\item kompetente Ansprechpartner ;-)
+		\item du eine Frage hast
+		\pause
+		\item du etwas nicht verstehst
+		\pause
+		\item du nicht weiß, warum X wichtig ist
+		\pause
+		\item du programmieren möchtest
+		\pause
+		\item der Wettbewerb im Sommersemester kommt
 	\end{itemize}
 
 \end{frame}
@@ -150,6 +158,7 @@
 		\item Warum studierst du das?
 		\item Was sind dein Hobbys?
 		\item Hast du schon Programmiererfahrung?
+		\item Welche Wünsche für das Tutorium hast du?
 	\end{enumerate}
 \end{frame}
 
