add URL to our website

--- a/src/01-intro.tex
+++ b/src/01-intro.tex
@@ -3,6 +3,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage{wrapfig}
+\usepackage{url}
 
 \usetheme{Rochester}
 
@@ -86,6 +87,7 @@
 	\begin{itemize}
 		\item wöchentlich, mittwochs, 11.15 - 12.45 Uhr, G29-336
 		\item alle 2 Wochen "Pflicht" (wir zwingen Euch aber nicht)
+		\item \url{http://tutorium.rosario-raulin.de}
 	\end{itemize}
 
 \end{frame}
