add goal and Kilian's avatar

--- a/src/01-intro.tex
+++ b/src/01-intro.tex
@@ -46,6 +46,10 @@
 		\item Facebook, Minestar.de, ...
 	\end{itemize}
 
+	\begin{flushright}
+		\includegraphics[scale=0.55555]{src/img/wurm}
+	\end{flushright}
+
 \end{frame}
 
 \begin{frame}
@@ -104,6 +108,7 @@
 	\begin{enumerate}
 		\item Abbrecherquote senken
 		\item sehr gute Prüfungsergebnisse
+		\item Programmierspaß wecken
 	\end{enumerate}
 
 \end{frame}
