--- a/src/02-unix.tex
+++ b/src/02-unix.tex
@@ -4,7 +4,6 @@
 \usepackage{graphicx}
 \usepackage{wrapfig}
 \usepackage{url}
-\usepackage{listings}
 
 \usetheme{Rochester}
 
@@ -166,15 +165,28 @@
 
 \begin{frame}
 
-	\frametitle{Live-Demo}
+	\frametitle{Live-Demo (1)}
 
-	Java-Programm in der Shell
+	1. Java-Programm in der Shell
 	\begin{itemize}
 		\item erstellen
 		\item kompilieren
 		\item ausführen
 	\end{itemize}
 
+\end{frame}
+
+\begin{frame}
+	\frametitle{Live-Demo (2)}
+
+	2. Eclipse-Workspace von zu Hause per SCP holen:
+	\begin{enumerate}
+		\item scp -r \textdollar{}user@[1]:/home/\textdollar{}user/workspace \textdollar{}ziel
+		\item	Passwort eintippen
+		\item	Fertig!
+	\end{enumerate}
+
+	\scriptsize [1] \url{trex.cs.uni-magdeburg.de}
 \end{frame}
 
 \section{Fragen und Antworten}
