remove useless command + add syntax highlighting

--- a/src/03-oo-design.tex
+++ b/src/03-oo-design.tex
@@ -4,7 +4,6 @@
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{color}
-\DeclareGraphicsRule{*}{mps}{*}{}
 
 \newcommand{\javakeyword}[1]{\textcolor{violet}{\texttt{{#1}}}}
 
@@ -101,7 +100,7 @@
 		\item[+] zentrale Definition öffentlich erreichbarer Funktionen
 		\item[+] Java: beliebig viele Interfaces pro Klasse
 		\item[-] keine Konstruktoren
-		\item[-] nur \texttt{public}-Methoden
+		\item[-] nur \javakeyword{public}-Methoden
 	\end{itemize}
 \end{frame}
 
